--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,6 +15,7 @@ html {
  */
 
 body {
+  font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   color: #244751;
   background-color: #eee;
@@ -23,3 +24,13 @@ body {
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ main {
+        position: relative;
+    height: 163px;
+    top: 140px;
+    width: 450px;
+    margin: 0 auto;
+    color: black;
+    border: 1px solid gray;
+    border-radius: 3%;
+ }
