--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -6,6 +6,22 @@
     background-color: #00a087;
     color: #e8fdff;
     padding: 0px 2em;
+    z-index: 1;
+}
+
+#nav-bar .button {
+  float: right;
+  margin-top: 12px;
+  border-radius: 10px;
+  height: 55px;
+  width: 132px;
+  border: 1px solid black;
+  color: white;
+  opacity: 0.5;
+}
+
+#nav-bar .button:hover {
+  opacity: 1;
 }
 
 #nav-bar .logo {
