--- a/public/styles/new-tweets.css
+++ b/public/styles/new-tweets.css
@@ -1,12 +1,7 @@
-.container {
-  background-color: lightgrey;
-  padding: 15px;
-}
 
 h2 {
-    height: 20px;
-    line-height: 0;
-    float: left;
+    height: 50px;
+    line-height: 50px;
     text-align: left;
     width: 100%;
     font-family: sans-serif;
@@ -15,7 +10,13 @@ h2 {
     color: darkgreen;
     border-bottom: 1px solid black;
 }
-
+.new-tweet {
+  margin-top: 150px;
+  background-color:  lightgrey;
+  border: 1px ridge black;
+  padding: 10px;
+  border-radius: 15px;
+ }
 
 .new-tweet form textarea {
   width: 100%;
@@ -25,9 +26,5 @@ h2 {
 .new-tweet form span {
     position: relative;
     text-align: right;
-    left: 333px;
+    left: 310px;
 }
-/*
-.new-tweet input {
-
-}*/
