--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -33,10 +33,9 @@ body {
  main {
 
     width: 450px;
-    margin: 0 auto;
+    margin: 25px auto;
     color: black;
     border: 1px solid gray;
-   /* border-radius: 3%;*/
     background-color: white;
     padding: 15px;
  }
