--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -2,6 +2,8 @@
 #nav-bar {
     position: fixed;
     height: 80px;
+    top: 0;
+    left: 0;
     width: 100%;
     background-color: #00a087;
     color: #e8fdff;
@@ -14,14 +16,23 @@
   margin-top: 12px;
   border-radius: 10px;
   height: 55px;
-  width: 132px;
   border: 1px solid black;
   color: white;
-  opacity: 0.5;
+  opacity: 0.75;
+  font-size: x-large;
 }
 
 #nav-bar .button:hover {
   opacity: 1;
+}
+
+.fa {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+    padding-right: 10px;
 }
 
 #nav-bar .logo {
