after project review

--- a/public/styles/new-tweets.css
+++ b/public/styles/new-tweets.css
@@ -1,31 +1,34 @@
-
 h2 {
-    height: 50px;
-    line-height: 50px;
-    text-align: left;
-    width: 100%;
-    font-family: sans-serif;
-    font-size: x-large;
-    font-weight: 900;
-    color: darkgreen;
-    border-bottom: 1px solid black;
-}
+  height: 50px;
+  line-height: 50px;
+  text-align: left;
+  width: 100%;
+  font-family: sans-serif;
+  font-size: x-large;
+  font-weight: 900;
+  color: darkgreen;
+  border-bottom: 1px solid black; }
+
 .new-tweet {
   margin-top: 100px;
-  background-color:  lightgrey;
+  background-color: lightgrey;
   border: 1px ridge black;
   padding: 10px;
   border-radius: 15px;
-  box-shadow: 0px 0.5px 0px 0.5px;
- }
+  box-shadow: 0px 0.5px 0px 0.5px; }
 
 .new-tweet form textarea {
   width: 100%;
-  padding: 3px 2em;
-}
+  padding: 3px 2em; }
 
 .new-tweet form span {
-    position: relative;
-    text-align: right;
-    left: 310px;
+  position: relative;
+  text-align: right;
+  left: 310px; }
+
+.counter.error {
+  color: red;
 }
+
+
+/*# sourceMappingURL=new-tweets.css.map */
