--- a/public/scss/nav.scss
+++ b/public/scss/nav.scss
@@ -1,3 +1,4 @@
+
 #nav-bar {
   position: fixed;
   height: 80px;
@@ -7,7 +8,8 @@
   background-color: #00a087;
   color: #e8fdff;
   padding: 0px 2em;
-  z-index: 1; }
+  z-index: 1;
+}
 
 #nav-bar .button {
   float: right;
@@ -17,10 +19,12 @@
   border: 1px solid black;
   color: white;
   opacity: 0.75;
-  font-size: x-large; }
+  font-size: x-large;
+}
 
 #nav-bar .button:hover {
-  opacity: 1; }
+  opacity: 1;
+}
 
 .fa {
   display: inline-block;
@@ -28,17 +32,20 @@
   font-size: inherit;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  padding-right: 10px; }
+  padding-right: 10px;
+}
 
 #nav-bar .logo {
   float: left;
   height: 80px;
   width: 80px;
-  margin-right: 10px; }
+  margin-right: 10px;
+}
+
 
 #nav-bar .header {
   float: left;
   font-size: 200%;
-  line-height: 200%; }
+  line-height: 200%;
 
-/*# sourceMappingURL=nav.css.map */
+}
